# infa_2_sem

./: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  CMakeLists.txt  binary.cpp  brackets.cpp  factorial.cpp  fibonatchy.cpp  hex.cpp  new3.cpp  next_prime.cpp  read_number.cpp  reset4.cpp  simple_number.cpp
