cmake_minimum_required(VERSION 3.21)
project(untitled)

set(CMAKE_CXX_STANDARD 23)


add_executable(next_prime next_prime.cpp)
add_executable(simple_number simple_number.cpp)
add_executable(read_number read_number.cpp)
add_executable(reset4 reset4.cpp)
add_executable(factorial factorial.cpp)
add_executable(fibonatchy fibonatchy.cpp)
add_executable(binary binary.cpp)
add_executable(hex hex.cpp)
add_executable(braces braces.cpp)
add_executable(bracets bracets.cpp)
add_executable(brackets brackets.cpp)